--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ form input[type="number"] {
 
 #botao {
     background-color: #CAAB66;
-    color: #121212;
+    color: #3a3939;
     border: none;
     border-radius: 6px;
     padding: 10px 15px;
